# Anjay-zephyr-client

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  prj.conf  west-nrf.yml  west.yml
bubblemaker/: CMakeLists.txt  README.md  pm_static_nrf9160dk_nrf9160_ns_intflash.yml  prj_intflash.conf  west-nrf.yml
bubblemaker/boards/: nrf7002dk_nrf5340_cpuapp.conf  nrf7002dk_nrf5340_cpuapp_ns.conf  nrf7002dk_nrf5340_cpuapp_ns.overlay  nrf9160dk_nrf9160_ns.conf  nrf9160dk_nrf9160_ns.overlay  nrf9160dk_nrf9160_ns_intflash.conf  nrf_led_strip_bindings.h
bubblemaker/src/: bubblemaker.c  bubblemaker.h  led_strip.c  led_strip.h  main_app.c  peripherals.h  sensors.c  sensors.h  status_led.c  status_led.h  water_meter.c  water_meter.h  water_pump.c  water_pump.h
compat/: mbedtls_compat.c  time_compat.c  zephyr_posix_compat.h
config/anjay/: anjay_config.h
config/avsystem/coap/: avs_coap_config.h
config/avsystem/commons/: avs_commons_config.h
demo/: CMakeLists.txt  Kconfig  README.md  overlay_nrf9160_afu.conf  overlay_nrf9160_afu_full.conf  overlay_nrf_mbedtls.conf  pm_static_nrf7002dk_nrf5340_cpuapp_ns.yml  pm_static_nrf9151dk_nrf9151_ns.yml  pm_static_nrf9160dk_nrf9160_ns.yml  pm_static_nrf9160dk_nrf9160_ns_extflash.yml  prj.conf  prj_extflash.conf  runtime_cert.conf  sysbuild.cmake  west-nrf.yml  west-t-mobile.yml  west.yml
demo/_sysbuild/mcuboot/boards/: disco_l475_iot1.conf  tmo_dev_edge.conf  tmo_dev_edge.overlay
demo/boards/: arduino_nano_33_ble_sense.conf  arduino_nano_33_ble_sense.overlay  disco_l475_iot1.conf  disco_l475_iot1.overlay  esp32.conf  esp32_devkitc_wroom.conf  nrf52840dk_nrf52840.conf  nrf7002dk_nrf5340_cpuapp.conf  nrf7002dk_nrf5340_cpuapp.overlay  nrf7002dk_nrf5340_cpuapp_ns.conf  nrf7002dk_nrf5340_cpuapp_ns.overlay  nrf9151dk_nrf9151_ns.conf  nrf9151dk_nrf9151_ns.overlay  nrf9160dk_nrf9160_ns.conf  nrf9160dk_nrf9160_ns.overlay  nrf9160dk_nrf9160_ns_extflash.conf  nrf9160dk_nrf9160_ns_intflash.conf  nrf9160dk_nrf9160ns.conf  thingy91_nrf9160_ns.conf  thingy91_nrf9160ns.conf  tmo_dev_edge.conf  tmo_dev_edge.overlay  tmo_dev_edge_partitions.overlay
demo/child_image/mcuboot/: prj.conf  prj_extflash.conf
demo/child_image/mcuboot/boards/: nrf7002dk_nrf5340_cpuapp.conf  nrf7002dk_nrf5340_cpuapp.overlay  nrf9151dk_nrf9151.conf  nrf9151dk_nrf9151.overlay  nrf9160dk_nrf9160.conf  nrf9160dk_nrf9160_intflash.conf
demo/src/: anjay_shell.c  common.h  config.c  config.h  default_config.h  firmware_update.c  firmware_update.h  gps.h  main.c  main_app.c  nrf_lc_info.c  nrf_lc_info.h  peripherals.h  persistence.c  persistence.h  sensors_config.c  sensors_config.h  status_led.c  status_led.h  utils.c  utils.h
demo/src/factory_provisioning/: factory_flash.c  factory_flash.h  provisioning_app.c
demo/src/gps_impl/: gps_nrf.c
demo/src/network/: network.c  network.h  network_esp32.c  network_eswifi.c  network_internal.h  network_nrf91.c  network_openthread.c  network_wifi.c
demo/src/objects/: accelerometer.c  barometer.c  basic_sensors.c  buzzer.c  conn_mon.c  device.c  distance.c  ecid.c  gyrometer.c  humidity.c  led_color_light.c  loc_assist.c  location.c  magnetometer.c  objects.h  push_button.c  switch.c  temperature.c  three_axis_sensors.c
demo/src/objects/impl/: basic_sensor_impl.c  basic_sensor_impl.h  three_axis_sensor_impl.c  three_axis_sensor_impl.h
ei_demo/: CMakeLists.txt  Kconfig  README.md  pattern_detector.xml  prj.conf  west-nrf.yml  west.yml
ei_demo/boards/: thingy91_nrf9160_ns.conf  thingy91_nrf9160ns.conf
ei_demo/ei/model-parameters/: dsp_blocks.h  model_metadata.h
ei_demo/ei/tflite-model/: trained_model_compiled.cpp  trained_model_compiled.h
ei_demo/src/: inference.cpp  inference.h  led.c  led.h  main.c  utils.c  utils.h
ei_demo/src/objects/: device.c  objects.h  pattern_detector.c
minimal/: CMakeLists.txt  Kconfig  README.md  anjay_qemu_net.sh  prj.conf  west-nrf.yml  west-t-mobile.yml  west.yml
minimal/boards/: arduino_nano_33_ble_sense.conf  disco_l475_iot1.conf  esp32.conf  esp32_devkitc_wroom.conf  nrf52840dk_nrf52840.conf  nrf7002dk_nrf5340_cpuapp.conf  nrf7002dk_nrf5340_cpuapp_ns.conf  nrf9160dk_nrf9160_ns.conf  qemu_x86.conf  thingy91_nrf9160_ns.conf  thingy91_nrf9160ns.conf  tmo_dev_edge.conf
minimal/src/: common.h  main.c  utils.c  utils.h
minimal/src/objects/: device.c  objects.h
projects/nrf9160/: prj.conf
projects/stm32l475/: CMakeLists.txt  prj.conf
src/: default_config.h  led.c  led.h  main.c  menu.c  menu.h  utils.c  utils.h
src/objects/: accelerometer.c  barometer.c  device.c  distance.c  gyrometer.c  humidity.c  magnetometer.c  objects.h  push_button.c  switch.c  temperature.c
src/objects/impl/: basic_sensor_impl.c  basic_sensor_impl.h  three_axis_sensor_impl.c  three_axis_sensor_impl.h
tools/: build_release_binaries.sh  validate_fota_file_size.py
tools/board_adapters/: esp_adapter.py  nrf_adapter.py  st_adapter.py  zephyr_adapter_common.py
tools/provisioning-tool/: final_overlay.conf  final_overlay_nrf9160dk.conf  initial_overlay.conf  ptool.py
tools/provisioning-tool/configs/: cert_info.json  endpoint_cfg_cert  lwm2m_server.json
